--- a/src/components/AboutUsHome/AboutUsHome.module.css
+++ b/src/components/AboutUsHome/AboutUsHome.module.css
@@ -2,7 +2,7 @@
     font-size: 30px;
     font-family: 'Poppins';
     font-weight: 500;
-    color: #ff4c0a;
+    color: #1877f2 ;
     text-align: left;
     margin-bottom: 29px;
 }
