--- a/src/components/CaseStudy/CaseStudy.module.css
+++ b/src/components/CaseStudy/CaseStudy.module.css
@@ -5,7 +5,7 @@
     font-family: 'Poppins';
     font-size: 30px;
     font-weight: 500;
-    color: #ff4c0a;
+    color: #1877f2 ;
     margin-bottom: 13px;
 }
 .our{
@@ -19,7 +19,7 @@
     display: inline;
     font-size: 34px;
     font-weight: bold;
-    color: #ff4c0a;
+    color: #1877f2 ;
 }
 .grp_btn{
     margin-top: 40px;
@@ -37,11 +37,11 @@
     cursor: pointer;
 }
 .filter:hover{
-    color: #ff4c0a;
+    color: #1877f2 ;
     font-weight: bold;
 }
 .active{
-    color: #ff4c0a;
+    color: #1877f2 ;
     font-weight: bold;
 }
 .img{
