--- a/src/components/ProjectDetails/OtherProjects/styles.css
+++ b/src/components/ProjectDetails/OtherProjects/styles.css
@@ -5,5 +5,5 @@
     height: 10px !important;
 }
 .react-multi-carousel-dot--active > button{
-    background-color: #ff4c0a !important;
+    background-color: #1877f2  !important;
 }
