--- a/src/components/ProjectDetails/ProjectDetails.module.css
+++ b/src/components/ProjectDetails/ProjectDetails.module.css
@@ -6,7 +6,7 @@
 }
 .title{
     font-size: 30px;
-    color: #ff4c0a;
+    color: #1877f2 ;
     font-weight: 500;
     text-align: left;
     margin-top: 60px;
