--- a/src/components/Real/Real.module.css
+++ b/src/components/Real/Real.module.css
@@ -4,7 +4,7 @@
 .heading{
     font-size: 30px;
     font-weight: 500;
-    color: #ff4c0a;
+    color: #1877f2 ;
     font-family: 'Poppins';
     text-align: left;
     font-weight: 500;
