--- a/src/components/Testimonial/Testimonial.module.css
+++ b/src/components/Testimonial/Testimonial.module.css
@@ -24,7 +24,7 @@
     font-family: 'Poppins';
     font-size: 30px;
     font-weight: 500;
-    color: #ff4c0a;
+    color: #1877f2 ;
 }
 .subHead{
     font-family: 'Poppins';
