--- a/src/components/AboutUs/Top/Top.module.css
+++ b/src/components/AboutUs/Top/Top.module.css
@@ -2,7 +2,7 @@
     font-family: 'Poppins';
     font-size: 30px;
     font-weight: 500;
-    color: #ff4c0a;
+    color: #1877f2 ;
     margin-top: 77px;
     margin-bottom: 0px;
 }
