--- a/src/components/NavbarMain/NavbarMain.module.css
+++ b/src/components/NavbarMain/NavbarMain.module.css
@@ -7,13 +7,13 @@
 .nav_text:hover{
     padding-top: 6px;
     font-size: 18px;
-    color: #ff4c0a !important;
+    color: #1877f2  !important;
     font-weight: bold;
 }
 .active{
     padding-top: 6px !important;
     font-size: 18px;
-    color: #ff4c0a !important;
+    color: #1877f2  !important;
     font-weight: bold;
 }
 
@@ -22,14 +22,14 @@
 }
 
 .drop:hover .nav_text{
-    color: #ff4c0a !important;
+    color: #1877f2  !important;
     font-weight: bold;
     cursor: pointer;
     font-size: 18px;
     /* padding-top: 7px; */
 }
 .logo{
-    color: #ff4c0a !important;
+    color: #1877f2  !important;
     font-weight: bold;
     font-family: 'Montserrat', sans-serif;
     font-size: 40px !important;
@@ -40,7 +40,7 @@
 }
 
 .dropdownItem:hover .dropdownText{
-    color: #ff4c0a;
+    color: #1877f2 ;
 }
 .drop a:hover{
     background-color: white;
