--- a/src/components/Testimonial/style.css
+++ b/src/components/Testimonial/style.css
@@ -5,5 +5,5 @@
     height: 10px !important;
 }
 .react-multi-carousel-dot--active > button{
-    background-color: #f64f59 !important;
+    background-color: #1877f2!important;
 }
