--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -10,12 +10,15 @@
     color: #fefefe;
     text-align: left;
     font-size: 16px;
-    margin-bottom: 0px;
+    margin-bottom: 10px; 
+    line-height: 1.6;
 }
+
 .social_logo{
     text-align: left;
     margin-top: 25px;
 }
+
 .img{
     margin-right: 14px;
     margin-bottom: 40px;
@@ -24,6 +27,7 @@
 .img:hover{
     transform: scale(1.1);
 }
+
 .head{
     color: #fefefe;
     font-size: 22px;
@@ -31,8 +35,8 @@
     margin-top: 15px;
     margin-bottom: 28px;
     font-weight: 500;
-    
 }
+
 .bottom{
     color: #fefefe;
     font-size: 16px;
@@ -49,6 +53,7 @@
         font-size: 35px;
     }
 }
+
 @media screen and (max-width: 600px){
     .logo{
         font-size: 28px;
@@ -64,6 +69,7 @@
         height: 45px;
     }
 }
+
 @media screen and (max-width: 575px){
     .contain{
         padding-left: 30% !important;
@@ -76,6 +82,7 @@
         margin-bottom: 25px;
     }
 }
+
 @media screen and (max-width: 455px){
     .contain{
         padding-left: 20% !important;
@@ -89,5 +96,4 @@
     .text{
         width: 100%;
     }
-
 }
