--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,99 +1,132 @@
-.logo{
-    font-size: 40px;
-    font-family: 'Montserrat';
-    font-weight: bold;
-    color: #1877f2 ;
-    text-align: left;
+.footerSection {
+  background-color: #2b2b2b;
+  padding-top: 89px;
+  padding-bottom: 90px;
 }
 
-.text{
-    color: #fefefe;
-    text-align: left;
-    font-size: 16px;
-    margin-bottom: 10px; 
-    line-height: 1.6;
+.logoWrapper {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 15px;
 }
 
-.social_logo{
-    text-align: left;
-    margin-top: 25px;
+.logoImg {
+  height: 42px;
+  width: auto;
+  transition: all 0.3s ease;
 }
 
-.img{
-    margin-right: 14px;
-    margin-bottom: 40px;
-    cursor: pointer;
-}
-.img:hover{
-    transform: scale(1.1);
-}
-
-.head{
-    color: #fefefe;
-    font-size: 22px;
-    text-align: left;
-    margin-top: 15px;
-    margin-bottom: 28px;
-    font-weight: 500;
+.logoText {
+  font-size: 36px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  color: #1877f2;
+  line-height: 1;
 }
 
-.bottom{
-    color: #fefefe;
-    font-size: 16px;
-    margin-bottom: 0px;
-    height: 49px;
-    padding-top: 12px;
+.text {
+  color: #fefefe;
+  text-align: left;
+  font-size: 16px;
+  margin-bottom: 10px;
+  line-height: 1.6;
 }
 
-@media screen and (max-width: 992px){
-    .text{
-        width: 230px;
-    }
-    .logo{
-        font-size: 35px;
-    }
+.social_logo {
+  text-align: left;
+  margin-top: 25px;
 }
 
-@media screen and (max-width: 600px){
-    .logo{
-        font-size: 28px;
-    }
-    .head{
-        font-size: 17px;
-    }
-    .text{
-        font-size: 14px;
-    }
-    .bottom{
-        font-size: 14px;
-        height: 45px;
-    }
+.img {
+  margin-right: 14px;
+  margin-bottom: 40px;
+  cursor: pointer;
+  transition: transform 0.2s ease;
 }
 
-@media screen and (max-width: 575px){
-    .contain{
-        padding-left: 30% !important;
-        margin-bottom: 25px;
-    }
-    .head{
-        margin-bottom: 10px;
-    }
-    .img{
-        margin-bottom: 25px;
-    }
+.img:hover {
+  transform: scale(1.1);
 }
 
-@media screen and (max-width: 455px){
-    .contain{
-        padding-left: 20% !important;
-    }
+.head {
+  color: #fefefe;
+  font-size: 22px;
+  text-align: left;
+  margin-top: 15px;
+  margin-bottom: 28px;
+  font-weight: 500;
 }
 
-@media screen and (max-width: 350px){
-    .contain{
-        padding-left: 10% !important;
-    }
-    .text{
-        width: 100%;
-    }
+.bottom {
+  color: #fefefe;
+  font-size: 16px;
+  margin-bottom: 0;
+  height: 49px;
+  padding-top: 12px;
+}
+
+.footerBottom {
+  background-color: #2b2b2b;
+  border-top: solid 1px #707070;
+}
+
+/* ==== Responsive ==== */
+@media screen and (max-width: 992px) {
+  .logoImg {
+    height: 36px;
+  }
+  .logoText {
+    font-size: 30px;
+  }
+  .text {
+    width: 230px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .logoImg {
+    height: 32px;
+  }
+  .logoText {
+    font-size: 24px;
+  }
+  .head {
+    font-size: 17px;
+  }
+  .text {
+    font-size: 14px;
+  }
+  .bottom {
+    font-size: 14px;
+    height: 45px;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .contain {
+    padding-left: 30% !important;
+    margin-bottom: 25px;
+  }
+  .head {
+    margin-bottom: 10px;
+  }
+  .img {
+    margin-bottom: 25px;
+  }
+}
+
+@media screen and (max-width: 455px) {
+  .contain {
+    padding-left: 20% !important;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .contain {
+    padding-left: 10% !important;
+  }
+  .text {
+    width: 100%;
+  }
 }
