--- a/src/components/CaseStudy/CaseStudy.module.css
+++ b/src/components/CaseStudy/CaseStudy.module.css
@@ -1,6 +1,7 @@
 .contain{
     margin-bottom: 150px;
 }
+
 .head{
     font-family: 'Poppins';
     font-size: 30px;
@@ -8,42 +9,24 @@
     color: #1877f2 ;
     margin-bottom: 13px;
 }
+
 .our{
     display: inline;
     font-size: 34px;
-    font-weight: 500;
-    color: #000000;
     font-weight: bold;
+    color: #000000;
 }
+
 .study{
     display: inline;
     font-size: 34px;
     font-weight: bold;
     color: #1877f2 ;
 }
-.grp_btn{
-    margin-top: 40px;
-    margin-bottom: 40px;
-}
 
-.filter{
-    display: inline;
-    margin-left: 25px;
-    margin-right: 25px;
-    font-family: 'Poppins';
-    font-size: 20px;
-    color: #000;
-    font-weight: 500;
-    cursor: pointer;
-}
-.filter:hover{
-    color: #1877f2 ;
-    font-weight: bold;
-}
-.active{
-    color: #1877f2 ;
-    font-weight: bold;
-}
+/*  🚀 FILTER + BUTTON SECTION REMOVED  */
+
+/*  img styles  */
 .img{
     width: 100%;
     height: 100%;
@@ -53,10 +36,12 @@
     border-radius: 10px;
     cursor: pointer;
 }
+
 .img:hover{
     transform: scale(1.04);
     transition: .5s;
 }
+
 .imgText1{
     font-family: 'Poppins';
     font-size: 14px;
@@ -66,6 +51,7 @@
     padding-left: 30px;
     margin-bottom: 2px;
 }
+
 .imgText2{
     font-family: 'Poppins';
     font-size: 22px;
@@ -76,6 +62,10 @@
     padding-bottom: 15px;
 }
 
+/* ------------------------- */
+/*   MEDIA QUERIES CLEANED   */
+/* ------------------------- */
+
 @media screen and (max-width: 992px) {
     .head{
         font-size: 25px;
@@ -83,21 +73,12 @@
     .our, .study{
         font-size: 30px;
     }
-    .filter{
-        font-size: 18px;
-        margin-left: 15px;
-        margin-right: 15px;
-    }
     .imgText2{
         font-size: 18px;
         padding-left: 20px;
     }
     .imgText1{
         padding-left: 20px;
-    }
-    .grp_btn{
-        margin-top: 30px;
-        margin-bottom: 30px;
     }
 }
 
@@ -107,14 +88,5 @@
     }
     .our, .study{
         font-size: 22px;
-    }
-    .filter{
-        font-size: 14px;
-        margin-left: 8px;
-        margin-right: 8px;
-    }
-    .grp_btn{
-        margin-top: 25px;
-        margin-bottom: 25px;
     }
 }
